Make sure long footnote urls don't overflow to the right

--- a/site/_less/main.less
+++ b/site/_less/main.less
@@ -346,6 +346,11 @@ time {
   margin: 0;
 }
 
+/* Make sure long footnote urls don't overflow to the right */
+.footnotes-list a {
+    word-wrap: break-word;
+}
+
 /* ==========================================================================
    Media Queries
    ========================================================================== */
